compiler/testData/diagnostics/testsWithStdLib/inference/kt30292.fir.kt
// !LANGUAGE: +NewInference

fun test(ls: List<String>) {
    ls.<!INAPPLICABLE_CANDIDATE!>takeIf<!>(<!UNRESOLVED_REFERENCE!>Collection<*>::isNotEmpty<!>)
}